# dao

./: .bonsai.yaml  .clang-format  .clang-tidy  .gitignore  .grove.yaml  .mise.toml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yml  conanfile.py  conanfile.txt  mise.toml
.github/workflows/: build.yml
bootstrap/: README.md  assemble.sh
bootstrap/graph/: tests.dao
bootstrap/hir/: impl.dao
bootstrap/lexer/: lexer.dao  tests.dao  tests.part.dao
bootstrap/llvm/: impl.dao
bootstrap/mir/: impl.dao
bootstrap/parser/: parser.dao  tests.dao
bootstrap/resolver/: impl.dao  impl.part.dao  resolver.dao
bootstrap/shared/: README.md  base.dao
bootstrap/typecheck/: impl.dao
compiler/: README.md
compiler/analysis/: CMakeLists.txt  README.md  analysis_test.cpp  completion.cpp  completion.h  document_symbols.cpp  document_symbols.h  goto_definition.cpp  goto_definition.h  hover.cpp  hover.h  references.cpp  references.h  semantic_tokens.cpp  semantic_tokens.h  semantic_tokens_test.cpp
compiler/backend/: README.md
compiler/backend/llvm/: CMakeLists.txt  README.md  llvm_abi.cpp  llvm_abi.h  llvm_backend.cpp  llvm_backend.h  llvm_backend_test.cpp  llvm_runtime_hooks.cpp  llvm_runtime_hooks.h  llvm_type_lowering.cpp  llvm_type_lowering.h
compiler/driver/: CMakeLists.txt  README.md  main.cpp  pipeline.cpp  pipeline.h
compiler/frontend/: CMakeLists.txt  README.md
compiler/frontend/ast/: README.md  ast.cpp  ast.h  ast_printer.cpp  ast_printer.h  ast_printer_test.cpp
compiler/frontend/diagnostics/: README.md  diagnostic.h  source.h
compiler/frontend/lexer/: README.md  lexer.cpp  lexer.h  lexer_test.cpp  token.h
compiler/frontend/parser/: README.md  parser.cpp  parser.h  parser_test.cpp
compiler/frontend/resolve/: resolve.cpp  resolve.h  resolve_context.h  resolve_test.cpp  scope.h  symbol.h
compiler/frontend/typecheck/: type_checker.cpp  type_checker.h  type_conversion.cpp  type_conversion.h  typecheck_test.cpp  typed_results.h
compiler/frontend/types/: type.cpp  type.h  type_builtin.h  type_context.cpp  type_context.h  type_kind.h  type_printer.cpp  type_printer.h  type_test.cpp
compiler/ir/: CMakeLists.txt  README.md
compiler/ir/hir/: README.md  hir.cpp  hir.h  hir_builder.cpp  hir_builder.h  hir_context.h  hir_kind.h  hir_printer.cpp  hir_printer.h  hir_test.cpp
compiler/ir/mir/: README.md  mir.cpp  mir.h  mir_builder.cpp  mir_builder.h  mir_context.h  mir_kind.h  mir_monomorphize.cpp  mir_monomorphize.h  mir_printer.cpp  mir_printer.h  mir_test.cpp
compiler/support/: arena.h  ir_context.h  module_utils.h  op_str.h  test_utils.h  variant.h
docs/: ARCH_INDEX.md  COMPILER_SERVICE_API.md  IDE_AND_TOOLING.md  IMPLEMENTATION_PLAN.md  PLAYGROUND_ARCHITECTURE.md  ROADMAP.md  building.md  compiler_bootstrap_and_architecture.md  language_vision.md
docs/contracts/: ADR_ENUM_CLASS.md  CONTRACT_BOOTSTRAP_AND_INTEROP.md  CONTRACT_COMPILER_PHASES.md  CONTRACT_C_ABI_INTEROP.md  CONTRACT_EXECUTION_CONTEXTS.md  CONTRACT_HIR_BOUNDARY.md  CONTRACT_LANGUAGE_TOOLING.md  CONTRACT_LLVM_BACKEND_BOUNDARY.md  CONTRACT_MIR_BOUNDARY.md  CONTRACT_NUMERIC_SEMANTICS.md  CONTRACT_REPOSITORY_LAYOUT.md  CONTRACT_RUNTIME_ABI.md  CONTRACT_SYNTAX_SURFACE.md  CONTRACT_TYPECHECKING_BASELINE.md  CONTRACT_TYPE_SYSTEM_FOUNDATIONS.md
docs/task_specs/: TASK_10_MIR.md  TASK_11_LLVM_BACKEND.md  TASK_12_TRAITS_AND_GENERICS.md  TASK_13_COROUTINES.md  TASK_15_C_ABI_INTEROP.md  TASK_17_LOW_LEVEL_MEMORY_SUBSTRATE.md  TASK_18_ENUM_PAYLOADS.md  TASK_19_DIAGNOSTIC_FORMATTER.md  TASK_20_BOOTSTRAP_LEXER.md  TASK_21_BOOTSTRAP_PARSER.md  TASK_22_BOOTSTRAP_RESOLVER.md  TASK_23_BOOTSTRAP_TYPE_CHECKER.md  TASK_24_BOOTSTRAP_HIR.md  TASK_25_BOOTSTRAP_MULTIFILE.md  TASK_26_BOOTSTRAP_CROSS_FILE_RESOLUTION.md  TASK_27_BOOTSTRAP_PROGRAM_TYPECHECK_AND_HIR.md  TASK_28_GENERIC_BODY_LOWERING_BOUNDARY.md  TASK_30_BOOTSTRAP_LLVM_BACKEND.md  TASK_6_RESOLVE.md  TASK_7_TYPES.md  TASK_8_TYPECHECK.md  TASK_9_HIR.md
examples/: README.md  arithmetic.dao  astar.dao  checked_arithmetic.dao  concepts.dao  control_flow.dao  conversions.dao  derived.dao  enums.dao  enums_payload.dao  generators.dao  generic_enums.dao  generics.dao  hashmap.dao  hello.dao  i64.dao  iteration.dao  match.dao  math.dao  pipelines.dao  raw_memory.dao  resource.dao  strings.dao  structs.dao  unsafe.dao  vectors.dao
examples/bootstrap_probe/: dao_lexer.dao  dao_lexer_v2.dao  diagnostic_formatter.dao  expr_parser.dao  lex_self.dao  mini_lexer.dao  token_stats.dao  type_checker.dao  vector_tokenizer.dao
examples/ffi/: callback_helper.c  ffi_callback.dao  ffi_helper.dao  ffi_libm.dao  ffi_struct.dao  helper.c  struct_helper.c
profiles/: clang-21-debug
runtime/: README.md
runtime/core/: CMakeLists.txt  convert.c  convert_test.cpp  dao_abi.h  dao_runtime.c  equality.c  generator.c  io.c  overflow.c  overflow_test.cpp  panic.c  resource.c  string.c
runtime/gpu/: README.md
runtime/memory/: README.md  alloc.c
runtime/modes/: README.md
spec/examples/: README.md
spec/grammar/: README.md  dao.ebnf  dao.lex  indentation_rules.md
spec/semantics/: README.md
spec/syntax_probes/: README.md  astar.dao  functions.dao  modes_and_resources.dao  pipelines.dao
stdlib/: README.md
stdlib/concepts/: iterable.dao
stdlib/core/: README.md  builtins.dao  comparable.dao  convert.dao  diagnostic.dao  equatable.dao  hashmap.dao  math.dao  memory.dao  numeric.dao  option.dao  overflow.dao  panic.dao  printable.dao  range.dao  result.dao  span.dao  string.dao  to_string.dao  vector.dao
stdlib/io/: README.md  file.dao
stdlib/numerics/: README.md
testdata/: README.md
testdata/ast/: astar.ast  examples_arithmetic.ast  examples_astar.ast  examples_bootstrap_probe_dao_lexer.ast  examples_bootstrap_probe_dao_lexer_v2.ast  examples_bootstrap_probe_diagnostic_formatter.ast  examples_bootstrap_probe_expr_parser.ast  examples_bootstrap_probe_lex_self.ast  (+54 more)
tools/playground/compiler_service/: CMakeLists.txt  analyze.cpp  analyze.h  examples.cpp  examples.h  main.cpp  pipeline.cpp  pipeline.h  run.cpp  run.h  token_category.h
(+34 files in other folders)
